# bugscope

./: .gitignore  README.md  package-lock.json  package.json  pnpm-workspace.yaml
.github/workflows/: build.yml
scripts/: download_icebug.sh  patch_macos_bundle_dylibs.sh  stage_macos_frameworks.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs
