[package]
name = "bugscope"
version = "0.15.1"
edition = "2021"

[lib]
name = "bugscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lbug = { git = "https://github.com/LadybugDB/ladybug-rust", features = ["arrow"] }
icebug = { git = "https://github.com/Ladybug-Memory/icebug-rust" }
arrow-array = "56"
walkdir = "2"
dirs = "5"
